--- a/css/1024about.scss
+++ b/css/1024about.scss
@@ -142,7 +142,7 @@
       .charity__title {
         font-size: 3.711vw;
         line-height: 4.688vw;
-        width: 616zpx;
+        width: 616px;
       }
       .charity__subtitle-wrapper {
         padding: 0;
@@ -325,7 +325,7 @@
     }
   }
 }
-@media only screen and (min-aspect-ratio: 1024 / 768) and (min-width: 601px) {
+@media only screen and (min-aspect-ratio: 1024 / 768) and (min-width: 861px) {
   .about,
   .charity,
   .roadmap,
