--- a/css/768about.scss
+++ b/css/768about.scss
@@ -326,7 +326,7 @@
     }
   }
 }
-@media only screen and (min-aspect-ratio: 768 / 800) and (min-width: 601px) {
+@media only screen and (min-aspect-ratio: 768 / 800) and (min-width: 601px) and (max-width: 860px) {
   .about,
   .charity,
   .roadmap,
