--- a/css/1024about.scss
+++ b/css/1024about.scss
@@ -325,7 +325,7 @@
     }
   }
 }
-@media only screen and (min-aspect-ratio: 1024 / 768) and (min-width: 861px) {
+@media only screen and (min-aspect-ratio: 1024 / 768) and (min-width: 861px) and (max-width: 1280px)  {
   .about,
   .charity,
   .roadmap,
