--- a/css/375about.css
+++ b/css/375about.css
@@ -1,43 +1,48 @@
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 600px) {
   .container {
-    width: 92.188vw;
+    width: 89.333vw;
   }
   .header {
-    padding: 2.93vw 3.906vw;
+    padding: 5.333vw;
   }
   .header a .logo {
-    width: 18.457vw;
+    width: 50.4vw;
   }
   .about {
-    padding: 0;
-    height: 100vh;
+    height: auto;
+    padding: 32vw 0 0 0;
+  }
+  .about .about-bg {
+    width: 150%;
   }
   .about .logo-bg {
-    top: 13.672vw;
-    right: 3.906vw;
-    width: 38.086vw;
+    top: 22.667vw;
+    right: 5.333vw;
+    width: 41.867vw;
   }
   .about .about__container .about__title {
-    font-size: 4.688vw;
-    line-height: 6.641vw;
+    font-size: 10.133vw;
+    line-height: 12.8vw;
   }
   .about .about__container .about__subtitle {
-    margin: 0.977vw 0 0 0;
-    width: 54.688vw;
-    font-size: 1.758vw;
-    line-height: 2.734vw;
+    margin: 2.666vw 0 0 0;
+    width: 100%;
+    font-size: 4vw;
+    line-height: 6.4vw;
   }
   .about .about__container .about__description {
-    margin: 2.93vw 0 0 0;
-    font-size: 1.563vw;
-    line-height: 2.344vw;
+    margin: 7.999vw 0 0 0;
+    font-size: 4vw;
+    line-height: 6.4vw;
   }
   .about .about__container .about__slider-wrapper {
-    margin: 2.93vw 0 0 0;
-    align-items: flex-start;
+    margin: 7.999vw 0 0 0;
+    gap: 13.333vw;
   }
   .about .about__container .about__slider-wrapper .slider {
+    width: 100%;
     position: relative;
+    justify-content: space-between;
   }
   .about .about__container .about__slider-wrapper .slider .button-prev,
 .about .about__container .about__slider-wrapper .slider .button-next {
@@ -45,17 +50,16 @@
     left: 50%;
     top: auto;
     bottom: 0;
-    width: 5.469vw;
-    height: 2.344vw;
+    width: 14.934vw;
+    height: 6.4vw;
     border: 1px solid #ffffff;
-    border-radius: 0.781vw;
-    transition: 0.3s color;
-    z-index: 1;
+    border-radius: 2.134vw;
+    transform: none;
   }
   .about .about__container .about__slider-wrapper .slider .button-prev img,
 .about .about__container .about__slider-wrapper .slider .button-next img {
-    width: 3.32vw;
-    height: 0.977vw;
+    width: 9.066vw;
+    height: 2.666vw;
   }
   .about .about__container .about__slider-wrapper .slider .button-prev:hover,
 .about .about__container .about__slider-wrapper .slider .button-next:hover {
@@ -66,244 +70,273 @@
     border: 1px solid #ffffff;
   }
   .about .about__container .about__slider-wrapper .slider .button-next {
-    transform: translate(0.488vw, calc(100% + 2.441vw));
+    transform: translate(1.333vw, calc(100% + 5.333vw));
   }
   .about .about__container .about__slider-wrapper .slider .button-next img {
     transform: rotate(180deg);
   }
   .about .about__container .about__slider-wrapper .slider .button-prev {
-    transform: translate(calc(-100% - 0.488vw), calc(100% + 2.441vw));
+    transform: translate(calc(-100% - 1.333vw), calc(100% + 20px));
   }
   .about .about__container .about__slider-wrapper .slider .slide-container {
-    width: 54.688vw;
+    width: 100%;
+    overflow: visible;
   }
   .about .about__container .about__slider-wrapper .slider .slide-container .slide-wrapper {
-    gap: 0.847vw;
+    gap: 2.134vw;
   }
   .about .about__container .about__slider-wrapper .slider .slide-container .slide-wrapper .slide {
-    width: 11.513vw;
-    height: 11.513vw;
-    padding: 0 1.514vw 1.172vw 1.523vw;
-    border-radius: 0.684vw 0.684vw 0 0;
+    width: 29.866vw;
+    height: 29.866vw;
+    padding: 0 3.201vw 3.201vw 3.201vw;
+    border-radius: 1.849vw 1.849vw 0 0;
   }
   .about .about__container .about__slider-wrapper .slider .slide-container .slide-wrapper .slide span {
-    font-size: 1.101vw;
-    line-height: 1.855vw;
+    font-size: 3.005vw;
+    line-height: 5.067vw;
   }
   .about .about__container .about__slider-wrapper .slider .slide-container .slide-wrapper .slide.active {
-    width: 14.561vw;
-    height: 14.561vw;
+    width: 37.867vw;
+    height: 37.867vw;
   }
   .about .about__container .about__slider-wrapper .slider .slide-container .slide-wrapper .slide.active span {
     transform: scale(1.26);
   }
   .about .about__container .about__slider-wrapper .slider__description {
-    width: 28.125vw;
+    width: 100%;
+    margin: 10.667vw 0 0 0;
   }
   .about .about__container .about__slider-wrapper .slider__description p {
-    font-size: 1.563vw;
-    line-height: 2.344vw;
+    font-size: 4.266vw;
+    line-height: 6.4vw;
+  }
+  .charity {
+    height: auto;
+    padding: 24vw 0 0 0;
   }
   .charity .charity-axolots1 {
-    bottom: 24.5%;
-    left: 3.125vw;
-    width: 9.766vw;
+    bottom: 10.667vw;
+    left: 5.333vw;
+    width: 20.267vw;
   }
   .charity .charity-axolots2 {
-    bottom: 20.5%;
-    left: 13.672vw;
-    width: 15.625vw;
+    bottom: 4.533vw;
+    left: 27.199vw;
+    width: 32.533vw;
   }
   .charity .heart-container {
-    bottom: 38.5%;
+    bottom: 10.4vw;
     top: auto;
-    left: 11.01vw;
-    width: 41.771vw;
-    height: 40.313vw;
+    left: auto;
+    right: -3.2vw;
+    width: 99.734vw;
+    height: 95.734vw;
+    transform: scale(0.6);
+    transform-origin: right;
   }
   .charity .heart-container .heart-wrapper .heart {
-    left: 2.396vw;
-    top: 2.083vw;
-    width: 37.396vw;
+    left: 4.907vw;
+    top: 4.266vw;
+    width: 89.33vw;
   }
   .charity .heart-container .heart-wrapper .planet {
-    right: 0.313vw;
-    top: 6.302vw;
-    width: 34.051vw;
+    right: 0.641vw;
+    top: 12.906vw;
+    width: 82.025vw;
   }
   .charity .charity__container {
     flex-direction: column;
+    padding: 0 0 75.467vw 0;
   }
   .charity .charity__container .charity__title {
-    font-size: 3.711vw;
-    line-height: 4.688vw;
-    width: 616px;
+    font-size: 7.467vw;
+    line-height: 10.133vw;
   }
   .charity .charity__container .charity__subtitle-wrapper {
     padding: 0;
-    width: 44.141vw;
-    gap: 1.953vw;
-    margin: 0 0 0 auto;
+    width: 100%;
+    gap: 6.666vw;
+    margin: 5.333vw 0 0 0;
   }
   .charity .charity__container .charity__subtitle-wrapper p {
-    font-size: 1.563vw;
-    line-height: 2.344vw;
+    font-size: 4vw;
+    line-height: 6.4vw;
   }
   .roadmap {
-    padding: 0;
+    height: auto;
+    padding: 24vw 0 0 0;
   }
   .roadmap .roadmap__container .roadmap__title {
-    font-size: 3.711vw;
-    line-height: 4.688vw;
+    font-size: 7.467vw;
+    line-height: 10.133vw;
+  }
+  .roadmap .roadmap__container #vr {
+    width: 250%;
+    transform: translateX(-30%);
+    margin: 6.667vw 0 21.333vw 0;
   }
   .roadmap .roadmap__container #vr .code {
-    top: 7.129vw;
-    right: 10.938vw;
-    width: 5.448vw;
+    display: none;
   }
   .roadmap .roadmap__container #vr .vr-text {
-    width: 48.828vw;
-    gap: 1.465vw;
+    width: 89.333vw;
+    gap: 4vw;
+    padding: 0 0 13.333vw 0;
   }
   .roadmap .roadmap__container #vr .vr-text p {
-    font-size: 1.563vw;
-    line-height: 2.344vw;
+    font-size: 4.266vw;
+    line-height: 6.4vw;
   }
   .roadmap .roadmap__container #vr .roadmap__navigation {
-    gap: 1.66vw;
-    position: static;
-    transform: translateX(0);
-    background: #03010d;
+    gap: 5.333vw;
   }
   .roadmap .roadmap__container #vr .roadmap__navigation .navigation__button-container {
-    gap: 5.859vw;
+    gap: 6.4vw;
   }
   .roadmap .roadmap__container #vr .roadmap__navigation .navigation__button-container .background-button {
-    border-radius: 0.586vw;
+    border-radius: 1.599vw;
   }
   .roadmap .roadmap__container #vr .roadmap__navigation .navigation__button-container .navigation__button {
-    padding: 0.293vw 0.586vw;
-    font-size: 1.563vw;
-    line-height: 1.563vw;
-    border-radius: 0.586vw;
+    padding: 1.067vw 1.333vw;
+    font-size: 4.266vw;
+    line-height: 4.266vw;
+    border-radius: 1.599vw;
   }
   .roadmap .roadmap__container #vr .roadmap__navigation .navigation__line {
-    width: 70.41vw;
+    width: 68%;
+  }
+  .story {
+    height: auto;
+    padding: 24vw 0 0 0;
+  }
+  .story .story-header {
+    transform: scale(1.6);
   }
   .story::before {
-    height: 24.654vw;
-    z-index: 2;
+    height: 66.666vw;
   }
-  .story .story__container .story__left-block {
-    width: 51.758vw;
+  .story .story__container {
+    padding: 0;
   }
   .story .story__container .story__left-block .stone {
-    left: -19vw;
-    top: 25.729vw;
-    width: 66.211vw;
+    left: -25.067vw;
+    top: 0;
+    bottom: auto;
+    transform: translateY(74%);
+    width: 119.467vw;
   }
   .story .story__container .story__left-block .story__title {
-    font-size: 3.711vw;
-    line-height: 4.688vw;
+    font-size: 7.467vw;
+    line-height: 10.133vw;
+  }
+  .story .story__container .story__left-block .story__title span {
+    display: block;
   }
   .story .story__container .story__left-block .story__subtitle {
-    font-size: 1.758vw;
-    line-height: 2.734vw;
-    width: 24.414vw;
-    margin: 28vw 0 0 3.711vw;
+    position: relative;
+    bottom: auto;
+    left: auto;
+    top: auto;
+    right: auto;
+    font-size: 4vw;
+    line-height: 6.4vw;
+    width: 56vw;
+    margin: 15.467vw 0 0 0;
   }
   .story .story__container .story__left-block .story__subtitle img {
-    width: 5.319vw;
-    bottom: 0.781vw;
-    right: 11vw;
+    width: 14.526vw;
+    bottom: 1.599vw;
+    right: 24.128vw;
   }
   .story .story__container .story__right-block {
-    margin: 9.766vw 0 0 0;
-    width: 42.09vw;
-    height: 54.004vw;
-    padding: 8.789vw 2.93vw 8.594vw 3.906vw;
+    margin: 37.333vw auto 0 auto;
+    width: 80.587vw;
+    height: 108.8vw;
+    padding: 16.533vw 5.6vw 16.533vw 7.2vw;
     position: relative;
   }
   .story .story__container .story__right-block::before {
-    width: 37.739vw;
-    height: 48.284vw;
-    filter: blur(2.539vw);
+    width: 80vw;
+    height: 104vw;
+    filter: blur(6.933vw);
   }
   .story .story__container .story__right-block img {
-    width: 44.02vw;
-    top: -5.664vw;
-    left: -2.637vw;
-    width: 63.379vw;
+    width: 100.885vw;
+    top: 0;
+    left: auto;
+    right: 0;
+    transform: translate(48%, -84%);
   }
   .story .story__container .story__right-block .description {
-    padding: 0 1.953vw 0 0;
-    gap: 2.042vw;
+    padding: 0 3.733vw 0 0;
+    gap: 5.577vw;
   }
   .story .story__container .story__right-block .description p {
-    font-size: 1.367vw;
-    line-height: 1.953vw;
+    font-size: 3.734vw;
+    line-height: 5.333vw;
   }
   .story .story__container .story__right-block .description::-webkit-scrollbar {
-    width: 0.208vw;
+    width: 0.8vw;
   }
   .story .story__container .story__right-block .description::-webkit-scrollbar-track {
     background-color: rgba(7, 3, 31, 0.1882352941);
-    border-radius: 0.417vw;
+    border-radius: 1.139vw;
   }
   .story .story__container .story__right-block .description::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 0.313vw #07031f;
-    border-radius: 0.417vw;
+    box-shadow: inset 0 0 2.667vw #07031f;
+    border-radius: 1.139vw;
   }
   .footer {
-    gap: 14.648vw;
-    padding: 9.766vw 0 5.859vw 0;
+    overflow: hidden;
+    gap: 32vw;
+    padding: 24vw 0 12vw 0;
+  }
+  .footer .footer-bg {
+    height: 133.333vw;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .footer .footer__container .footer__left-block .footer__title {
-    font-size: 3.711vw;
-    line-height: 4.688vw;
-    width: 60.156vw;
-  }
-  .footer .footer__container .footer__left-block .footer__title img {
-    display: none;
+    font-size: 7.467vw;
+    line-height: 10.133vw;
   }
   .footer .footer__container .footer__left-block .footer__subtitle {
-    font-size: 1.563vw;
-    line-height: 2.344vw;
-    margin: 9.766vw 0 0 0;
-    gap: 0.586vw;
+    font-size: 3.733vw;
+    line-height: 6.4vw;
+    margin: 26.667vw 0 0 0;
+    gap: 1.599vw;
   }
   .footer .footer__container .footer__mail {
-    position: absolute;
-    font-size: 2.734vw;
-    line-height: 3.32vw;
-    gap: 1.172vw;
-    transform: translateY(50%);
+    font-size: 5.867vw;
+    line-height: 7.2vw;
+    gap: 2.667vw;
   }
   .footer .footer__container .footer__mail img {
-    width: 2.93vw;
+    width: 6.667vw;
+  }
+  .footer .social__container {
+    flex-direction: column;
   }
   .footer .social__container .social__left-block {
-    gap: 3.906vw;
+    gap: 4vw;
+    flex-direction: column;
   }
   .footer .social__container .social__left-block span {
-    font-size: 1.172vw;
-    line-height: 1.465vw;
+    font-size: 3.201vw;
+    line-height: 4vw;
   }
   .footer .social__container .social__logo {
-    width: 16.992vw;
+    margin: 13.333vw 0 0 0;
+    width: 46.399vw;
   }
   .footer .social__container .social {
-    gap: 1.465vw;
+    right: 0;
+    left: auto;
+    top: 0%;
+    gap: 4vw;
+    transform: translate(0%, 15%);
   }
   .footer .social__container .social a svg {
-    width: 3.32vw;
+    width: 9.066vw;
   }
-}
-@media only screen and (min-aspect-ratio: 1024/768) and (min-width: 861px) and (max-width: 1280px) {
-  .about,
-.charity,
-.roadmap,
-.story {
-    height: 67.188vw;
-  }
-}/*# sourceMappingURL=1024about.css.map */
+}/*# sourceMappingURL=375about.css.map */
