--- a/css/1920about.scss
+++ b/css/1920about.scss
@@ -48,6 +48,7 @@ a {
   height: auto;
   background-color: #0d4b9e;
   overflow: hidden;
+  position: relative;
 }
 .container {
   width: 76.458vw;
@@ -58,10 +59,60 @@ a {
   width: 100%;
   padding: 1.823vw 2.604vw;
   z-index: 10;
-  a {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .logo-link {
     .logo {
       width: 10.625vw;
       height: auto;
+    }
+  }
+  .header__right-block {
+    .open-menu{
+      display: none;
+    }
+    .nav__wrapper {
+      .close-menu{
+        display: none;
+      }
+      .nav {
+        display: flex;
+        gap: 2.083vw;
+        li {
+          position: relative;
+          .item {
+            font-family: "Inter";
+            font-style: normal;
+            font-weight: 700;
+            font-size: 0.729vw;
+            line-height: 0.885vw;
+            letter-spacing: -0.02em;
+            text-transform: uppercase;
+            color: #ffffff;
+            text-decoration: none;
+            transition: 0.35s color;
+          }
+          &::after {
+            content: "";
+            display: block;
+            bottom: 0;
+            left: 0;
+            width: 0%;
+            height: 1px;
+            background: #ff66c4;
+            transition: 0.35s width;
+          }
+          &:hover {
+            .item {
+              color: #ff66c4;
+            }
+            &::after {
+              width: 100%;
+            }
+          }
+        }
+      }
     }
   }
 }
@@ -208,7 +259,7 @@ a {
                 letter-spacing: -0.02em;
                 color: #ffffff;
                 z-index: 1;
-                transition: 0.35s transform, .35s;
+                transition: 0.35s transform, 0.35s;
                 margin: auto 0 0 0;
                 transform-origin: bottom left;
               }
@@ -862,6 +913,7 @@ a {
     position: relative;
     bottom: 0;
     .social__left-block {
+      opacity: 0;
       display: flex;
       gap: 2.083vw;
       span {
@@ -892,8 +944,8 @@ a {
           display: block;
           width: 2.083vw;
           height: auto;
-          circle{
-            transition: .35s fill;
+          circle {
+            transition: 0.35s fill;
           }
         }
         &:hover {
@@ -919,4 +971,3 @@ a {
     height: 50.521vw;
   }
 }
-
