--- a/css/1920about.scss
+++ b/css/1920about.scss
@@ -208,7 +208,7 @@ a {
             background: #ff66c4;
             border: 0.052vw solid #ff66c4;
           }
-          &.inactive {
+          &.active {
             opacity: 0.3;
             &:hover {
               border: 0.052vw solid #ffffff;
